renders previous image partially hidden behind div and correctly renders drawing canvas

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,10 +35,10 @@ body {
 }
 
   canvas {
-      /*position: absolute;
+      position: absolute;
       left: 200px;
       top: 100px;
-      z: -1;*/
+      z: -1;
   }
 
   img.lob {
@@ -46,15 +46,7 @@ body {
       left: 0px;
       top: 100px;
       z: 2;
-      height: 400px;
-      width: 100px;
-  }
-
-  img.lobs {
-      position: absolute;
-      left: 900px;
-      top: 100px;
-      z: 2;
-      height: 400px;
-      width: 100px;
+      height: 401px;
+      width: 150px;
+      pointer-events: none;
   }
